static/css/main.css
.center {
  margin: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

fieldset{
  background-color: rgba(150, 150, 150, 0.6);
}

submitButton{
  background:    #ffffff;
  border:        2px solid #000000;
  border-radius: 0px;
  box-shadow:    3px 3px #444444;
  padding:       20px 45px;
  color:         #000000;
  display:       inline-block;
  font:          normal bold 18px/1 "Open Sans", sans-serif;
  text-align:    center;
}
submitButton:hover {
  border-color:#7a7a7a;
}

body {
  color: #333333;
  margin-top: 60px;
  margin-bottom: 60px;
  padding-top: 40px;
}

@media screen and (max-width: 768px) {
    body { padding-top: 0px; }
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 60px;
  background-color: #f5f5f5;
}

html {
  position: relative;
  min-height: 100%;
}

main > .container {
  padding: 70px 15px 0;
}

.navbar-custom{
    }

.navbar-custom .navbar-brand{
    font-weight: bold;
    font-size: 25px;
}

.navbar img {
    width: 80px;
    height: auto;
}

